# csv-tools

./: .gitignore  Cargo.toml  README.md  build-release  deny.toml  pyproject.toml  release.py  release.sh
.cargo/: config.toml
.github/actions/: rust-build-action.yml
.github/actions/rust-build-action/: action.yml
.github/actions/rust-create-release-action/: action.yml
.github/workflows/: ci-catcsv.yml  ci-fixed2csv.yml  ci-geochunk.yml  ci-hashcsv.yml  ci-scrubcsv.yml  release-catcsv.yml
catcsv/: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml  trigger-ci.txt
catcsv/fixtures/: test.csv  test.csv.sz
catcsv/src/: main.rs
catcsv/tests/: tests.rs
fixed2csv/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  trigger-ci.txt
fixed2csv/src/: main.rs
geochunk/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
geochunk/notebook/: .gitignore  ZipDistribution.ipynb  geochunk_zip_250000.csv
geochunk/src/: errors.rs  main.rs  zip2010.rs
geochunk/tests/: tests.rs
geocode-csv/: .travis.yml  Cargo.toml  Dockerfile  README.md  deny.toml
geocode-csv/src/: addresses.rs  async_util.rs  geocoder.rs  main.rs  smartystreets.rs  structure.rs  unpack_vec.rs
geocode-csv/src/structures/: complete.json
geocode-csv/tests/: about.rs  duplicate_columns.rs  specs.rs
hashcsv/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  trigger-ci.txt
hashcsv/src/: main.rs
hashcsv/tests/: tests.rs
scrubcsv/: CHANGELOG.md  Cargo.toml  trigger-ci.txt
scrubcsv/src/: errors.rs  main.rs  util.rs
scrubcsv/src/clean_column_names/: mod.rs  stable.rs  unique.rs
scrubcsv/tests/: tests.rs
