[project]
name = "csv-tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seamus Abshere", email = "seamus@abshere.net"},
]
dependencies = ["tomli>=2.3.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
