[package]
name = "catcsv"
version = "0.1.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Concatenate directories of (possibly-compressed CSV) files into one CSV file"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/catcsv"

[dev-dependencies]
cli_test_dir = "0.1.2"

[dependencies]
csv = "1"
docopt = "1"
env_logger = "0.8"
error-chain = "0.12.4"
log = "0.4.14"
serde = "1.0.123"
snap = "1"
walkdir = "2.3"
