[package]
name = "fixed2csv"
version = "1.0.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Convert files with fixed-width columns to CSV"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/csv-tools"
homepage = "https://github.com/faradayio/csv-tools/tree/main/fixed2csv"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.0.2"
env_logger = "0.11"
humansize = "2"
humantime = "2"
log = "0.4.6"
