[package]
name = "geochunk"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Split a CSV semi-evenly based on ZIP population stats"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/geochunk"

[dev-dependencies]
cli_test_dir = "0.1.2"

[dependencies]
# Enable this by passing `--features "clippy"` to cargo.  Needs nightly Rust.
clippy = { version = "0.0.*", optional = true }
csv = "0.15.0"
docopt = "0.7.0"
env_logger = "0.4.2"
error-chain = "0.10.0"
log = "0.3.7"
# Deprecated in favor of serde, but needed for doctopt:
rustc-serialize = "0.3"
snap = "0.2.1"
walkdir = "1.0.7"
