[package]
name = "geochunk"
version = "0.1.5"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Split a CSV semi-evenly based on ZIP population stats"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/geochunk"
homepage = "http://blog.faraday.io/geochunk-fast-intelligent-splitting-for-piles-of-address-data/"

[dev-dependencies]
cli_test_dir = "0.1.2"

[dependencies]
# Enable this by passing `--features "clippy"` to cargo.  Needs nightly Rust.
clippy = { version = "0.0.*", optional = true }
csv = "= 1.0.0-beta.5"
docopt = "0.8"
env_logger = "0.4"
error-chain = "0.11"
lazy_static = "0.2"
log = "0.3.7"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
snap = "0.2.1"
walkdir = "1.0.7"
