[package]
name = "geochunk"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Split a CSV semi-evenly based on ZIP population stats"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/csv-tools"
homepage = "http://blog.faraday.io/geochunk-fast-intelligent-splitting-for-piles-of-address-data/"

[dev-dependencies]
cli_test_dir = "0.1.2"

[dependencies]
csv = "1"
docopt = "1.1"
env_logger = "0.9.0"
error-chain = "0.12.4"
lazy_static = "1.4"
log = "0.4.14"
regex = "1.4.3"
serde = "1.0"
serde_derive = "1.0"
snap = "1.0.4"
walkdir = "2.3.1"
