[package]
name = "geocode-csv"
version = "0.3.0-beta.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Unofficial CLI tool to bulk geocode CSV data using the SmartyStreets API"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/faradayio/geocode-csv"
documentation = "https://github.com/faradayio/geocode-csv"

[dev-dependencies]
cli_test_dir = "0.1.7"

[dependencies]
common_failures = "0.1.1"
csv = "1.0.7"
env_logger = "0.7.1"
failure = "0.1.5"
futures = "0.3.4"
hyper = "0.13.4"
hyper-tls = "0.4.1"
log = "0.4.6"
serde = { version = "1.0.92", features = ["derive"] }
# IMPORTANT: We require `preserve_order` to correctly handle "structure" JSON'
# specifications in a way that puts the right data in the right output columns.
serde_json = { version = "1.0.39", features = ["preserve_order"] }
structopt = "0.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
tokio = { version = "0.2.13", features = ["io-util", "stream", "sync"] }
url = "2.1.1"
