[package]
name = "scrubcsv"
version = "1.1.0"
authors = ["Eric Kidd <git@randomhacks.net>", "Seamus Abshere <seamus@abshere.net>"]
edition = "2018"

description = "Remove bad lines from large CSV files and normalize the rest"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/csv-tools"
homepage = "https://github.com/faradayio/csv-tools/tree/main/scrubcsv"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
csv = "1"
env_logger = "0.11"
humansize = "2.1"
lazy_static = "1.5"
libc = "0.2"
log = "0.4"
regex = "1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
cli_test_dir = "0.1.1"
