[package]
name = "scrubcsv"
version = "1.1.1"
authors = ["Eric Kidd <git@randomhacks.net>", "Seamus Abshere <seamus@abshere.net>"]
edition = "2018"

description = "Remove bad lines from large CSV files and normalize the rest"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/csv-tools"
homepage = "https://github.com/faradayio/csv-tools/tree/main/scrubcsv"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
csv = "1.4.0"
env_logger = "0.11.8"
humansize = "2.1.3"
lazy_static = "1.5.0"
libc = "0.2.180"
log = "0.4.29"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
cli_test_dir = "0.1.8"
